# MessageRW

./: .gitignore  README.md  pyproject.toml
src/message_rw/: MessageIO.py  rw.py
src/message_rw/cli/: msgrwClient.py  msgrwServer.py
