[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "message_rw"
authors = [
  {name="Takanori Kono", email="takanori.kono@gmail.com"}
]
dynamic = ["version"]
version = "v0.0.0"
requires-python = ">=3.10"
dependencies = [
"hatch"
]

[project.scripts]
msgrw-server = "message_rw:cli:msgrwServer:main"
msgrw-client = "message_rw:cli:msgrwClient:main"

